hphp/test/zend/bad/ext-spl/SplDoublyLinkedList_offsetExists_invalid_parameter.php
<?php
$list = new SplDoublyLinkedList();
$a = $list->offsetExists();
if(is_null($a)) {
	echo 'PASS';
}
?>